# dongshanMD

./: .gitignore  ANDROID_SETUP.md  README.md  create-icon.md  index.html  package-lock.json  package.json  release.sh  test.docx  test.md  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: local-resources.json  migrated.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs
src/components/: Editor.css  Editor.tsx  Sidebar.css  Sidebar.tsx
src/utils/: exportUtils.ts  fileOperations.ts  i18n.ts  markdownHighlight.ts
tests/: utils.test.ts
