[package]
name = "dongshan-md"
version = "1.0.2"
description = "A markdown editor built with Tauri and SolidJS"
authors = ["dongshanrandeng"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "dongshan_md_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "dongshan-md"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
